tests/parser/multiply-expression-error.stderr
error: expected expression
 --> $DIR/multiply-expression-error.lox:1:5
  |
1 | 5 * /;
  |     ^
